--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,22 +9,33 @@ on:
   workflow_dispatch:
 
 jobs:
+  diff:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: 'actions/checkout@v3'
+        with:
+          fetch-depth: 0
+      - name: Diff against `main`
+        id: diff
+        uses: 'selfagency/diffmasterflex@v1.0.3'
+        with:
+          ref: 'origin/main'
+
+      - name: Check for changes
+        id: changes
+        if: ${{ steps.diff.outputs.changed == 'true' }}
+        run:
+          DIFF="${{ steps.diff.outputs.diff }}"
   deployment:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Clone the Code
-        uses: actions/checkout@v3
-
-      - name: Verify the Code is Cloned
-        run: ls -la
-
       - name: Copy code to the Server
         uses: easingthemes/ssh-deploy@main
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
           ARGS: "-rltgoDzvO"
-          SOURCE: "index.html"
+          SOURCE: "${{ steps.diff.outputs.diff }}"
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
@@ -35,4 +46,4 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
-          script: sudo mv index.html /var/www/html
+          script: sudo mv ${{ steps.diff.outputs.diff }} /var/www/html
