--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,16 @@ on:
   workflow_dispatch:
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      name: Build Job
+      echo: Completed Build Job
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      name: Test Job
+      echo: Completed Test Job
   deployment:
     runs-on: ubuntu-latest
     steps:
