--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,13 @@ jobs:
         run: echo Completed Build Job
   test:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Test Job
         run: echo Completed Test Job
   deployment:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout repo
         uses: 'actions/checkout@v3'
