--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Build Job
-        run: echo Completed Build Job
+      - name: Checkout repo
+        uses: 'actions/checkout@v3'
+      - name: Inject Version Details
+        run: |
+        sed -i 's/REPLACEAPPLICATIONENVIRONMENT/${{GITHUB_ENV}}/g' myapp/version.html 
   test:
     runs-on: ubuntu-latest
     needs: build
