--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         uses: 'actions/checkout@v3'
       - name: Inject Version Details
         run: |
-        sed -i 's/REPLACEAPPLICATIONENVIRONMENT/${{GITHUB_ENV}}/g' myapp/version.html 
+        sed -i 's/REPLACEAPPLICATIONENVIRONMENT/~~GITHUB_ENV/g' myapp/version.html 
   test:
     runs-on: ubuntu-latest
     needs: build
