--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,30 @@ jobs:
         uses: 'actions/checkout@v3'
       - name: Inject Version Details
         run: |
-          sed -i 's/REPLACEAPPLICATIONENVIRONMENT/GITHUB_ENV/g' myapp/version.html 
+          sed -i 's/REPLACEAPPLICATIONENVIRONMENT/$GITHUB_ENV/g' myapp/version.html
+      - name: Upload the artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: myapp-package
+          path: myapp
+
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Test Job
         run: echo Completed Test Job
+      - name: Download the artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: myapp-package
+          path: myapp
+      - name: Verify the downloaded Packages
+        run: |
+          ls -la
+          pwd
+      - name: Cat the file and test for replacement.
+        run: cat myapp/version.html
   deployment:
     runs-on: ubuntu-latest
     needs: test
