--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,17 @@ jobs:
     steps:
       - name: Checkout repo
         uses: 'actions/checkout@v3'
+      - name: Download the artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: myapp-package
+          path: myapp
+      - name: Verify the downloaded Packages
+        run: |
+          ls -la
+          pwd
+      - name: Cat the file and test for replacement.
+        run: cat myapp/version.html
 
       # - name: Copy code to the Server
       #   uses: easingthemes/ssh-deploy@main
@@ -67,7 +78,7 @@ jobs:
       - name: Copy & Deploy
         uses: mdallasanta/ssh-scp-deploy@v1.2.0
         with:
-          local: 'myapp'                                                  # Local file path - REQUIRED false - DEFAULT ./
+          local: 'myapp-package'                                                  # Local file path - REQUIRED false - DEFAULT ./
           remote: '/home/${{secrets.USER}}'                                                 # Remote file path - REQUIRED false - DEFAULT ~/
           host: ${{secrets.HOST}}                                      # Remote server address - REQUIRED true
           user: ${{secrets.USER}}                                      # Remote server user - REQUIRED true                          # User password - REQUIRED at least one of "password" or "key" 
