--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ jobs:
         uses: 'actions/checkout@v3'
       - name: Inject Version Details
         run: |
-          sed -i 's/REPLACEAPPLICATIONENVIRONMENT/$GITHUB_ENV/g' myapp/version.html
+          sed -i 's/REPLACEAPPLICATIONENVIRONMENT/'$GITHUB_ENV'/g' myapp/version.html
+          sed -i 's/REPLACEAPPBUILDNO/'$GITHUB_ENV'/g' myapp/version.html
       - name: Upload the artifact
         uses: actions/upload-artifact@v3
         with:
